Write conflict error message makes no mention of write conflicts

XMLWordPrintableJSON

    • Query Execution
    • Fully Compatible
    • ALL
    • v8.0
    • QE 2024-07-22, RSS Sydney - 2024-07-09
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In 7.0.11, a write conflict due to an update would generate this error message:

      Caused by :: Write conflict during plan execution and yielding is disabled. :: Please retry your operation or multi-document transaction.
      

      In 8.0.0-rc9, the message is now:

      Internal retry explicitly disabled for query :: caused by :: Caused by ::  :: Please retry your operation or multi-document transaction.
      

      While the error code is WriteConflict, the message does not explain the error well. We should improve this, and clean up all of the "caused by" formatting issues.

            Assignee:
            Colin Stolley
            Reporter:
            Louis Williams
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: