SERVER-91779: Write conflict error message makes no mention of write … (#24960)

GitOrigin-RevId: c07fd9eb6a37c86646356c968c627ce50eff31bd